--- a/app/walkandplay/trunk/client/web/about.html
+++ b/app/walkandplay/trunk/client/web/about.html
@@ -33,7 +33,7 @@
       <area shape="rect" coords="199,0,258,43" href="#" id="mainbuttonsview"/>
     </map>
     <ul style="text-align:right;">
-      <li><span><a href="myaccount.html">my page</a></span></li>
+      <li><span><a href="profile.html">my page</a></span></li>
       <li><span><a href="about.html">about</a></span></li>
       <li id="signin_bt"><span><a href="#">sign in</a></span></li>
       <li id="help_bt"><span>help</span></li>
