--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -33,7 +33,7 @@
       <area shape="rect" coords="199,0,258,43" href="#" id="mainbuttonsview"/>
     </map>
     <ul style="text-align:right;">
-      <li><span><a href="myaccount.html">my page</a></span></li>
+      <li><span><a href="profile.html">my page</a></span></li>
       <li><span><a href="about.html">about</a></span></li>
       <li id="signin_bt"><span><a href="#">sign in</a></span></li>
       <li id="help_bt"><span>help</span></li>
@@ -70,10 +70,10 @@
 <div id="loginbox" style="position:absolute; width:220px; left:365px; top:54px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <form name="signinform" id="signinform">
-      username
+      email
       <input type="text" id="username"/>
       password
-      <input type="text" id="password"/>
+      <input type="password" id="password"/>
 		<div>
 			<span id="forgotpw">forgot password</span>
 			<span id="submit_signin"> submit</span>
@@ -137,42 +137,10 @@
     </ul>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="tagcloud"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock" style="height:120px;">
-    <ul>
-      <li style="font-size:20px;"><a href="#">tag1</a></li>
-      <li style="font-size:40px;"><a href="#">tag2</a></li>
-      <li style="font-size:30px;"><a href="#">tag3</a></li>
-      <li style="font-size:30px;"><a href="#">tag4</a></li>
-      <li style="font-size:16px;"><a href="#">tag5</a></li>
-      <li style="font-size:40px;"><a href="#">tag6</a></li>
-      <li style="font-size:50px;"><a href="#">tag7</a></li>
-      <li style="font-size:20px;"><a href="#">tag8</a></li>
-      <li style="font-size:20px;"><a href="#">tag9</a></li>
-      <li style="font-size:40px;"><a href="#">tag7</a></li>
-      <li style="font-size:30px;"><a href="#">tag6</a></li>
-      <li style="font-size:30px;"><a href="#">tag</a></li>
-      <li style="font-size:16px;"><a href="#">tag</a></li>
-      <li style="font-size:40px;"><a href="#">tag</a></li>
-      <li style="font-size:50px;"><a href="#">tag</a></li>
-      <li style="font-size:20px;"><a href="#">tag</a></li>
-    </ul>
-  </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="tag_block" style="display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-    <div id="tagblock_title">tours tagged :</div>
-    <ul>
-      <li><a href="#">nieuwmarkt</a></li>
-      <li><a href="#">city centre </a></li>
-      <li><a href="#">cycling</a></li>
-    </ul>
-  </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="signup_block"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  	<div class="contentblock" style="height:120px;">
+  	<div class="contentblock">
    	 	<ul>
-      		<li><a href="newaccount.html"><span class="style1">sign up!</span></a></li>
+      		<li><a href="signup.html"><span class="style1">sign up!</span></a></li>
       		<li><a href="#">most popular</a></li>
       		<li><a href="#">traces near you</a></li>
       		<li><a href="upcoming.html">upcoming tours</a></li>
