--- a/app/walkandplay/trunk/client/web/signup.html
+++ b/app/walkandplay/trunk/client/web/signup.html
@@ -41,32 +41,7 @@
     <br />
     <br />
   </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
-</div>
-<div id="buttonbar" style="text-align:left;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-    <ul>
-      <li> <img src="img/archive_bt.gif" alt="archive button" width="45" style=" margin-left:30px;" id="archive_bt"/> </li>
-      <li> <img src="img/map_bt.gif" alt="mapButton" width="45" border="0" id="maps_bt"/> </li>
-      <li> <img src="img/search_bt.gif" alt="search" width="45" id="search_bt"/> </li>
-      <li> <img src="img/score_bt.gif" alt="live" id="live_bt" width="45"/></li>
-      <li>
-        <div id="searchbox" style="position:absolute; width:226px; left:142px; top:72px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-          <div class="contentblock"> <span>search</span><br/>
-            <br/>
-            <form>
-              <input name="text" type="text" style="background:url(img/input_bg.jpg) no-repeat;" size="18"/>
-              <a href="#">
-              <div class="style2" id="submitSearch" style="text-align:right; text-decoration:underline;margin-right:80px;">submit</div>
-              <br />
-              </a>
-            </form>
-            <img src="img/searchTarget.gif" alt="searchTaget" style="position:absolute; left:172px; width: 33px; top: 30px;"/> </div>
-          <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-      </li>
-    </ul>
-  </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="loginbox" style="position:absolute; width:220px; left:365px; top:54px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <form name="signinform" id="signinform">
@@ -74,13 +49,10 @@
       <input type="text" id="username"/>
       password
       <input type="text" id="password"/>
-		<div>
-			<span id="forgotpw">forgot password</span>
-			<span id="submit_signin"> submit</span>
-		</div>	
+      <div> <span id="forgotpw">forgot password</span> <span id="submit_signin"> submit</span> </div>
     </form>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="mapbox" style="position:absolute; width:200px; left:141px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
@@ -89,7 +61,7 @@
       <li>street + satellite</li>
     </ul>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div> 
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
@@ -97,17 +69,16 @@
       <li>archived traces</li>
       <li>points of interest</li>
     </ul>
-	<ul style="padding:0px; display:none;">
+    <ul style="padding:0px; display:none;">
       <li>my tours</li>
       <li>my traces</li>
       <li>my media</li>
     </ul>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="archivetoursbox" style="position:absolute; width:162px; left:264px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-  </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <div class="contentblock"> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
@@ -115,34 +86,66 @@
       <li>live traces</li>
       <li>live users</li>
     </ul>
-  </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="archivetracksbox" style="position:absolute; width:162px; left:444px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-  </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-    <ul style="padding:0px;">
-      <li>live tours</li>
-      <li>live traces</li>
-      <li>live users</li>
-    </ul>
-  </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-
-<div id="formblock" style="text-align:left;z-index:15;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock" style="background-color:#E9E9E9; height:200px;">
-  		congratulations 
   </div>
   <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-		<script type="text/javascript">
+<div id="archivetracksbox" style="position:absolute; width:162px; left:444px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock"> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <ul style="padding:0px;">
+      <li>live tours</li>
+      <li>live traces</li>
+      <li>live users</li>
+    </ul>
+  </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<div id="archivebox" style="position:absolute; width:162px; left:261px; top:283px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock">
+    <ul style="list-style:none;">
+      <li>archive content</li>
+    </ul>
+  </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  
+  
+<div id="formblock" style="text-align:left;z-index:15; width:500px;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+  <div class="contentblock" style="background-color:#E9E9E9;">
+  <form enctype="application/x-www-form-urlencoded" name="signupform" id="signupform">
+    <input type="hidden" id="imageId" name="photoid" value="" />
+      <ul style="list-style:none; display:inline;">
+        <li>name (as it appears on screen):</li>
+        <li>
+          <input type="text" class="medium" size="38" name="nickname"/>
+        </li>
+        <li> password:</li>
+        <li>
+          <input type="password" class="medium" size="38" name="password"/>
+        </li>
+        <li>confirm password:</li>
+        <li>
+          <input type="password" class="medium" size="38" name="password"/>
+        </li>
+        <li> e-mail address:</li>
+        <li>
+          <input type="text" class="small" size="20" name="email"/>
+        </li>
+		<li>    
+			<br/><button type="submit">submit</button></li>
+      </ul>
+    </ul>
+  </form>
+  </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
+ </div>
+<script type="text/javascript" src="js/newaccount.js"></script>
+<script type="text/javascript">
 		SRV.url = 'wp/srv/get.jsp?';
 		if(typeof sIFR == "function"){
 		    sIFR.replaceElement("#logobox span", named({sFlashSrc: "js/sIFR2.0.2/skia.swf",sBgColor:"#eeeeee"}));
     		sIFR();
 		};		
-		</script>
-		<script type="text/javascript" src="js/events.js"></script>
+	</script>
+<script type="text/javascript" src="js/events.js"></script>
 </body>
 </html>
