--- a/app/walkandplay/trunk/client/web/upcoming.html
+++ b/app/walkandplay/trunk/client/web/upcoming.html
@@ -111,7 +111,7 @@
 <div id="signup_block"> <b class="rtopgrey"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblockgrey">
     <ul>
-      <li><a href="newaccount.html"><span class="style1">sign up!</span></a></li>
+      <li><a href="signup.html"><span class="style1">sign up!</span></a></li>
       <li><a href="#">most popular</a></li>
       <li><a href="#">traces near you</a></li>
       <li><a href="upcoming.html">upcoming tours</a></li>
