--- a/app/walkandplay/trunk/client/web/profile.html
+++ b/app/walkandplay/trunk/client/web/profile.html
@@ -3,15 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing</title>
-<script type="text/javascript" src="js/KWClient.js"></script>
+<script type="text/javascript" src="js/gt/KWClient.js"></script>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
-<script type="text/javascript" src="js/ajax-pushlet-client.js"></script>
-<script type="text/javascript" src="js/DHTML.js"></script>
-<script type="text/javascript" src="js/GMap.js"></script>
-<script type="text/javascript" src="js/GMapKeys.js"></script>
-<script type="text/javascript" src="js/MyApp.js"></script>
-<script type="text/javascript" src="js/WPapp.js"></script>
-<script type="text/javascript" src="js/User.js"></script>
+<script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
+<script type="text/javascript" src="js/gt/DHTML.js"></script>
+<script type="text/javascript" src="js/gt/GMap.js"></script>
+<script type="text/javascript" src="js/gt/GMapKeys.js"></script>
+<script type="text/javascript" src="js/gt/MyApp.js"></script>
+<script type="text/javascript" src="js/gt/WPapp.js"></script>
+<script type="text/javascript" src="js/gt/User.js"></script>
 <script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
 <link rel="stylesheet" href="css/sIFR-screen.css" />
@@ -116,15 +116,9 @@
 <div id="formblock" style="text-align:left;z-index:15;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock" style="background-color:#E9E9E9;">
     <!--SIGNUP FORM-->
-    <ul id="tabs" style="list-style:none;">
-      <li style="display:inline; font-weight:bold;" id="tab1">step 1</li>
-      <li style="display:inline;" id="tab2">step 2 </li>
-      <li style="display:inline;" id="tab3">step 3 </li>
-    </ul>
     <form enctype="application/x-www-form-urlencoded" name="signupform" id="signupform">
 	<input type="hidden" id="imageId" name="photoid" value="" />
-      <div id="tab_1" style="position:relative;display:block;">
-        <ul style="list-style:none;">
+        <ul style="list-style:none; display:inline;">
           <li>name (as it appears on screen):</li>
           <li>
             <input type="text" class="medium" size="38" name="nickname"/>
@@ -147,40 +141,38 @@
           </li>
         </ul>
         <iframe id="uploadFrame" style="display:none;" name="uploadFrame"> </iframe>
-        &nbsp; </div>
-      <div id="tab_2" style="display:none;">
-        <ul style="list-style:none;">
+        <ul style="list-style:none;display:inline;">
           <li> first name:</li>
           <li>
-            <input type="text" size="100" class="large" name="firstname"/>
+            <input type="text" size="38" class="medium" name="firstname"/>
           </li>
           <li> last name:</li>
           <li>
-            <input type="text" size="100" class="large" name="lastname"/>
+            <input type="text" size="38" class="medium" name="lastname"/>
           </li>
           <li> street:</li>
           <li>
-            <input type="text"  size="100" class="large" name="address"/>
+            <input type="text"  size="38" class="medium" name="address"/>
           </li>
           <li> housenumber:</li>
           <li>
-            <input type="text"  size="100" class="large" name="streetnr"/>
+            <input type="text"  size="38" class="medium" name="streetnr"/>
           </li>
           <li> postal code:</li>
           <li>
-            <input type="text"  size="100" class="large" name="zip"/>
+            <input type="text"  size="38" class="medium" name="zip"/>
           </li>
           <li> city:</li>
           <li>
-            <input type="text"  size="100" class="large" name="place"/>
+            <input type="text"  size="38" class="medium" name="place"/>
           </li>
           <li> country:</li>
           <li>
-            <input type="text" size="100" class="large" name="country"/>
+            <input type="text" size="38" class="medium" name="country"/>
           </li>
           <li> keywords:</li>
           <li>
-            <textarea name="keywords" cols="75" rows="3"></textarea>
+            <textarea name="keywords" cols="30" rows="10"></textarea>
           </li>
           <li>
             <p>
@@ -195,56 +187,21 @@
             </p>
           </li>
         </ul>
-        &nbsp; </div>
-      <div id="tab_3" style="display:none;">
-        <ul style="list-style:none;">
-          <li> 1. Mogen derden gebruik maken van uw werk voor commerci&euml;le doeleinden? (meer informatie more information)</li>
-          <li>
-            <label>
-            <input type="radio" name="cc1" value="yes" checked/>
-            Ja</label>
-            <br />
-            <label>
-            <input type="radio" name="cc1" value="no" />
-            Nee</label>
-          </li>
-          <li> <br />
-            <br />
-            2. Mogen derden uw werk bewerken? (meer informatie more information)</li>
-          <li>
-            <label>
-            <input type="radio" name="cc2" value="yes" checked/>
-            Ja</label>
-            <br />
-            <label>
-            <input type="radio" name="cc2" value="though" />
-            Ja, zolang derden ook gelijk delen (meer informatie more information)</label>
-            <br />
-            <label>
-            <input type="radio" name="cc2" value="no" />
-            Nee</label>
-          </li>
-          <li>
-            <div><br />
-              <br />
-              <button type="submit">submit</button>
-            </div>
-          </li>
-        </ul>
-        &nbsp;</div>
+		<button type="submit">submit</button>
     </form>
-	<form id="addmediumform" name="addmediumform" enctype="multipart/form-data" target="uploadFrame" method="post" action="wp/media.srv" >
-		<input name="file" id="file" type="file"  />
+	<div id="imgform_block" style="position:absolute; width:250px; left: 384px; top: 61px;">
+	<form id="addmediumform" name="addmediumform" enctype="multipart/form-data" target="uploadFrame" method="post" action="wp/media.srv">
+		<input name="file" id="file" type="file"/>
 		<input name="description" id="name" type="hidden" value="null" />
 		<input name="name" id="description" type="hidden" value="null" />
 		<input name="agentkey" id="agentkey" type="hidden" value="null" />
 		<input name="xmlrsp" id="xmlrsp" type="hidden" value="true" />
-		<div id="add">voeg afbeelding toe</div>
 	</form>
-	<img id="previewImage" style="display:none"/>
+		<img id="previewImage" style="display:none"/>
+	</div>
   </div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-	<script type="text/javascript" src="js/newaccount.js"></script>
+	<script type="text/javascript" src="js/profile.js"></script>
 	<script type="text/javascript">
 		SRV.url = 'wp/srv/get.jsp?';
 		if(typeof sIFR == "function"){
