--- a/app/walkandplay/trunk/client/web/myaccount.html
+++ b/app/walkandplay/trunk/client/web/myaccount.html
@@ -178,8 +178,8 @@
           <li>
             <input type="text" size="100" class="large" name="country"/>
           </li>
-          <li> keywords:</li>
-          <li>
+          <li style="position:absolute;"> keywords:</li>
+          <li style="position:absolute;">
             <textarea name="keywords" cols="75" rows="3"></textarea>
           </li>
           <li>
