--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing</title>
-<script type="text/javascript" src="js/gt/KWClient.js"></script>
+<script type="text/javascript" src="js/gt/myKWClient.js"></script>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
 <script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
 <script type="text/javascript" src="js/gt/DHTML.js"></script>
@@ -147,7 +147,7 @@
     	</ul>
   	</div>
 <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-	<table border="0" align="right" cellpadding="0" cellspacing="0" id="infobox" style="display:block;position:absolute;right:20px; top:20px;">
+	<table border="0" align="right" cellpadding="0" cellspacing="0" id="infobox" style="display:none;position:absolute;right:20px; top:20px;">
 			<tr style="display:none;">
 				<td height="60" valign="middle" align="center" bgcolor="#dddddd">
 					<div id="trackview">TRACK PREVIEW</div>
@@ -188,10 +188,7 @@
 			  <td height="400" width="320" valign="middle" align="center" style="background:url(img/mediaplayer.png) no-repeat;">
 			  	<div id="featurepreview" style="height:290px;"></div>
 				<div id="featurecontrols" class="controls">
-					<span class="control" id="featfirst" style="display:none;"><img title="first feature" src="img/media-skip-backward.png" border="0 "alt="ctrl"onload="DH.fixPNG(this)"  /></span>
-					<span class="control" id="featprev" style="display:none;"><img title="previous feature" src="img/media-seek-backward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
-					<span class="control" id="featnext"><img title="next feature" src="img/play.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
-					<span class="control" id="featlast" style="display:none;"><img title="last feature" src="img/media-skip-forward.png" border="0 "alt="ctrl" onload="DH.fixPNG(this)" /></span>
+					<span class="control" id="featnext"><img title="next feature" src="img/play.png" border="0 "alt="ctrl" /></span>
 				</div>
 			  </td>
 			</tr>
