--- a/app/walkandplay/trunk/client/web/myaccount.html
+++ b/app/walkandplay/trunk/client/web/myaccount.html
@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing</title>
-<script type="text/javascript" src="js/KWClient.js"></script>
+<script type="text/javascript" src="js/myKWClient.js"></script>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
-<script type="text/javascript" src="js/ajax-pushlet-client.js"></script>
-<script type="text/javascript" src="js/DHTML.js"></script>
-<script type="text/javascript" src="js/GMap.js"></script>
-<script type="text/javascript" src="js/GMapKeys.js"></script>
+<script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
+<script type="text/javascript" src="js/gt/DHTML.js"></script>
+<script type="text/javascript" src="js/gt/GMap.js"></script>
+<script type="text/javascript" src="js/gt/GMapKeys.js"></script>
 <script type="text/javascript" src="js/MyApp.js"></script>
-<script type="text/javascript" src="js/WPapp.js"></script>
+<script type="text/javascript" src="js/gt/WPapp.js"></script>
 <script type="text/javascript" src="js/User.js"></script>
 <script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
