--- a/app/walkandplay/trunk/client/web/profile.html
+++ b/app/walkandplay/trunk/client/web/profile.html
@@ -3,15 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 <title>GeoTracing</title>
-<script type="text/javascript" src="js/gt/myKWClient.js"></script>
+<script type="text/javascript" src="js/myKWClient.js"></script>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
 <script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
 <script type="text/javascript" src="js/gt/DHTML.js"></script>
 <script type="text/javascript" src="js/gt/GMap.js"></script>
 <script type="text/javascript" src="js/gt/GMapKeys.js"></script>
-<script type="text/javascript" src="js/gt/MyApp.js"></script>
+<script type="text/javascript" src="js/MyApp.js"></script>
 <script type="text/javascript" src="js/gt/WPapp.js"></script>
-<script type="text/javascript" src="js/gt/User.js"></script>
+<script type="text/javascript" src="js/User.js"></script>
 <script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
 <link rel="stylesheet" href="css/sIFR-screen.css" />
