aan het opschonen

--- a/app/walkandplay/trunk/client/web/upcoming.html
+++ b/app/walkandplay/trunk/client/web/upcoming.html
@@ -8,12 +8,16 @@
 <link rel="stylesheet" type="text/css" href="css/widget.css"/>
 <link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
 <link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
+<script type="text/javascript" src="js/myKWClient.js"></script>
 <script type="text/javascript" src="js/dojo/dojo.js"></script>
 <script type="text/javascript" src="js/gt/ajax-pushlet-client.js"></script>
 <script type="text/javascript" src="js/gt/DHTML.js"></script>
 <script type="text/javascript" src="js/gt/GMap.js"></script>
-<script type="text/javascript" src="js/GMapKeys.js"></script>
-<script type="text/javascript" src="js/gt/GTApp.js"></script>
+<script type="text/javascript" src="js/gt/GMapKeys.js"></script>
+<script type="text/javascript" src="js/MyApp.js"></script>
+<script type="text/javascript" src="js/gt/WPapp.js"></script>
+<script type="text/javascript" src="js/User.js"></script>
+<script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
 <link rel="stylesheet" href="css/geotracing.css" />
 </head>
 <body onunload="GUnload()">
