--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="js/gt/GMap.js"></script>
 <script type="text/javascript" src="js/gt/GMapKeys.js"></script>
 <script type="text/javascript" src="js/MyApp.js"></script>
-<script type="text/javascript" src="js/gt/WPapp.js"></script>
+<script type="text/javascript" src="js/WPapp.js"></script>
 <script type="text/javascript" src="js/User.js"></script>
 <script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
