--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -210,7 +210,9 @@
 		if(typeof sIFR == "function"){
 		    sIFR.replaceElement("#logobox span", named({sFlashSrc: "js/sIFR2.0.2/skia.swf",sBgColor:"#eeeeee"}));
     		sIFR();
-		};		
+		};
+				PL.joinListen('/');
+		
 		</script>
 </body>
 </html>
