profile editing+trace bekijken vanuit profile

--- a/app/walkandplay/trunk/client/web/index.html
+++ b/app/walkandplay/trunk/client/web/index.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="js/WPapp.js"></script>
 <script type="text/javascript" src="js/User.js"></script>
 <script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
+<script type="text/javascript" src="js/pageCommands.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
 <link rel="stylesheet" href="css/sIFR-screen.css" />
 </head>
@@ -211,7 +212,6 @@
 		    sIFR.replaceElement("#logobox span", named({sFlashSrc: "js/sIFR2.0.2/skia.swf",sBgColor:"#eeeeee"}));
     		sIFR();
 		};
-				PL.joinListen('/');
 		
 		</script>
 </body>
