--- a/app/walkandplay/trunk/client/web/profile.html
+++ b/app/walkandplay/trunk/client/web/profile.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="js/gt/GMap.js"></script>
 <script type="text/javascript" src="js/gt/GMapKeys.js"></script>
 <script type="text/javascript" src="js/MyApp.js"></script>
-<script type="text/javascript" src="js/gt/WPapp.js"></script>
+<script type="text/javascript" src="js/WPapp.js"></script>
 <script type="text/javascript" src="js/User.js"></script>
 <script type="text/javascript" src="js/sIFR2.0.2/sifr.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
@@ -27,7 +27,7 @@
 <div id="logobox"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock"><br />
     <a href="index.html"><img src="img/gt_logo.gif" alt="logo" width="221" border="0"/></a> <img src="img/cpv_v_over.gif" width="265" border="0" usemap="#Map" id="mainbuttons"/>
-    <map name="Map">
+    <map name="Map" id="Map">
       <area shape="rect" coords="2,-1,79,43" href="#" id="mainbuttonscreate"/>
       <area shape="rect" coords="90,-1,149,42" href="#" id="mainbuttonsplay"/>
       <area shape="rect" coords="199,0,258,43" href="#" id="mainbuttonsview"/>
@@ -41,8 +41,7 @@
     <br />
     <br />
   </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
-</div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="loginbox" style="position:absolute; width:220px; left:365px; top:54px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <form name="signinform" id="signinform">
@@ -50,13 +49,10 @@
       <input type="text" id="username"/>
       password
       <input type="text" id="password"/>
-		<div>
-			<span id="forgotpw">forgot password</span>
-			<span id="submit_signin"> submit</span>
-		</div>	
+      <div> <span id="forgotpw">forgot password</span> <span id="submit_signin"> submit</span> </div>
     </form>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="mapbox" style="position:absolute; width:200px; left:141px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
@@ -65,7 +61,7 @@
       <li>street + satellite</li>
     </ul>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div> 
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="archivenavbox" style="position:absolute; width:162px; left:93px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
@@ -73,17 +69,16 @@
       <li>archived traces</li>
       <li>points of interest</li>
     </ul>
-	<ul style="padding:0px; display:none;">
+    <ul style="padding:0px; display:none;">
       <li>my tours</li>
       <li>my traces</li>
       <li>my media</li>
     </ul>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="archivetoursbox" style="position:absolute; width:162px; left:264px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-  </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <div class="contentblock"> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
@@ -92,11 +87,10 @@
       <li>live users</li>
     </ul>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="archivetracksbox" style="position:absolute; width:162px; left:444px; top:279px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-  </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <div class="contentblock"> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="livenavbox" style="position:absolute; width:162px; left:250px; top:281px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="padding:0px;">
@@ -105,129 +99,172 @@
       <li>live users</li>
     </ul>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <div id="archivebox" style="position:absolute; width:162px; left:261px; top:283px; display:none;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
   <div class="contentblock">
     <ul style="list-style:none;">
       <li>archive content</li>
     </ul>
   </div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-
-
+  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
+<!-- EINDE NAVBLOCKS -->
 <div id="infoblock" style="position:absolute; top:200px; left:52px; width:800px;">
-<b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-<div class="contentblock">
+	<b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+	<div class="contentblock">
+	<!-- PROFILE OVERZICHT BLOCK-->  
+  		<div id="profileblock" style="display:block;"> 
+
+      			<div id="GOTOeditview">edit</div>
+				<div id="generalInfo" style="display:block;"> 
+					<b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+					<div class="contentblock">
+						<!-- CONTENT -->
+							<div id="mytraces"></div>
 
 
-<div id="profileblock" style="display:block;">
-<b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock">
-  <div id="GOTOeditview">edit</div>
-  profile overzicht, tours comments etc.
-  
-  </div>
-  <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
-</div>
+							<div id="profilesummary"></div>
+						<!-- /CONTENT -->
+					</div>
+					<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
+				</div>
+				
+		</div>
+		<!-- EINDE OVERZICHT BLOCK-->  
+		<!--ACCOUNT EDITING -->		
+	<div id="formblock" style="text-align:left;z-index:15; display:none; position:static;">
+      <div id="GOTOoverview">general info</div>
+      <!--SIGNUP FORM-->
+      <form enctype="application/x-www-form-urlencoded" name="signupform" id="signupform">
+        <div style="width:300px; float:left;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+          <div class="contentblock" style="background-color:#E9E9E9;">
+            <input type="hidden" id="imageId" name="photoid" value="" />
+            <ul style="list-style:none; display:inline;">
+              <li>name (as it appears on screen):</li>
+              <li>
+                <input type="text" class="medium" size="38" name="nickname"/>
+              </li>
+              <li> e-mail address (sign-up):</li>
+              <li>
+                <input type="text" class="small" size="20" name="email"/>
+                <select name="emailpublic">
+                  <option value="true">public</option>
+                  <option onblur="false">private</option>
+                </select>
+              </li>
+              <li> mobile phone number:</li>
+              <li>
+                <input type="text" class="medium" size="38" name="phone"/>
+              </li>
+            </ul>
+            <iframe id="uploadFrame" style="display:none;" name="uploadFrame"> </iframe>
+            <ul style="list-style:none;display:inline;">
+              <li> first name:</li>
+              <li>
+                <input type="text" size="38" class="medium" name="firstname"/>
+              </li>
+              <li> last name:</li>
+              <li>
+                <input type="text" size="38" class="medium" name="lastname"/>
+              </li>
+              <li> street:</li>
+              <li>
+                <input type="text"  size="38" class="medium" name="address"/>
+              </li>
+              <li> housenumber:</li>
+              <li>
+                <input type="text"  size="38" class="medium" name="streetnr"/>
+              </li>
+              <li> postal code:</li>
+              <li>
+                <input type="text"  size="38" class="medium" name="zip"/>
+              </li>
+              <li> city:</li>
+              <li>
+                <input type="text"  size="38" class="medium" name="place"/>
+              </li>
+              <li> country:</li>
+              <li>
+                <input type="text" size="38" class="medium" name="country"/>
+              </li>
+            </ul>
+          </div>
+          <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
+	    </div><!-- END BLOCK1 -->
+		 <!-- BLOCK2-->
 
 
 
-<div id="formblock" style="text-align:left;z-index:15; display:none; position:static;"> <b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
-  <div class="contentblock" style="background-color:#E9E9E9;">
-  <div id="GOTOoverview">general info</div>
-    <!--SIGNUP FORM-->
-    <form enctype="application/x-www-form-urlencoded" name="signupform" id="signupform">
-	<input type="hidden" id="imageId" name="photoid" value="" />
-        <ul style="list-style:none; display:inline;">
-          <li>name (as it appears on screen):</li>
-          <li>
-            <input type="text" class="medium" size="38" name="nickname"/>
-          </li>
-          <li> e-mail address (sign-up):</li>
-          <li>
-            <input type="text" class="small" size="20" name="email"/>
-            <select name="emailpublic">
-              <option value="true">public</option>
-              <option onblur="false">private</option>
-            </select>
-          </li>
-          <li> mobile phone number:</li>
-          <li>
-            <input type="text" class="medium" size="38" name="phone"/>
-          </li>
-        </ul>
-        <iframe id="uploadFrame" style="display:none;" name="uploadFrame"> </iframe>
-        <ul style="list-style:none;display:inline;">
-          <li> first name:</li>
-          <li>
-            <input type="text" size="38" class="medium" name="firstname"/>
-          </li>
-          <li> last name:</li>
-          <li>
-            <input type="text" size="38" class="medium" name="lastname"/>
-          </li>
-          <li> street:</li>
-          <li>
-            <input type="text"  size="38" class="medium" name="address"/>
-          </li>
-          <li> housenumber:</li>
-          <li>
-            <input type="text"  size="38" class="medium" name="streetnr"/>
-          </li>
-          <li> postal code:</li>
-          <li>
-            <input type="text"  size="38" class="medium" name="zip"/>
-          </li>
-          <li> city:</li>
-          <li>
-            <input type="text"  size="38" class="medium" name="place"/>
-          </li>
-          <li> country:</li>
-          <li>
-            <input type="text" size="38" class="medium" name="country"/>
-          </li>
-          <li style="position:absolute; left: 382px; top: 125px;"> keywords:</li>
-          <li style="position:absolute; left: 383px; top: 154px;">
-            <textarea name="keywords" cols="30" rows="10"></textarea>
-          </li>
-          <li>
-            <p>
-              <label>
-              <input type="radio" name="privacy" value="public" checked/>
-              make profile public</label>
-              <br />
-              <label>
-              <input type="radio" name="privacy" value="private" />
-              keep profile private</label>
-              <br />
-            </p>
-          </li>
-        </ul>
-		<button type="submit">submit</button>
+
+
+
+		 <div style="width:300px;float:left; position:relative;left:20px;top:200px;">
+        	<b class="rtop"><b class="r1"></b><b class="r2"></b><b class="r3"></b><b class="r4"></b></b>
+        		<div class="contentblock">
+        			<ul style="display:inline;">
+          				<li>keywords:</li>
+          				<li><textarea name="keywords" cols="30" rows="5"></textarea></li>
+          				<li>
+							<p>
+								<label>
+									<input type="radio" name="privacy" value="public" checked="checked"/>make profile public
+								</label>
+								<br />
+								<label>
+									<input type="radio" name="privacy" value="private" />keep profile private
+								</label>
+								<br />
+							</p>
+          				</li>
+        			</ul>
+        			<button type="submit">submit</button>
+      			</div>
+	  		<b class="rbottom" style="clear:both;"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
+		</div>
+	
+
+
+
+
+
+
+
+
+
+
+	<!-- END BLOCK2-->
     </form>
-	<div id="imgform_block" style="position:absolute; width:250px; left: 384px; top: 61px;">
-	<form id="addmediumform" name="addmediumform" enctype="multipart/form-data" target="uploadFrame" method="post" action="wp/media.srv">
-		<input name="file" id="file" type="file"/>
-		<input name="description" id="name" type="hidden" value="null" />
-		<input name="name" id="description" type="hidden" value="null" />
-		<input name="agentkey" id="agentkey" type="hidden" value="null" />
-		<input name="xmlrsp" id="xmlrsp" type="hidden" value="true" />
-	</form>
-		<img id="previewImage" style="display:none"/>
+		<div style="position:absolute;top:42px;left:297px;">
+			<img src="" id="previewImage" style=" width:100px; height:100px;"/>
+			<form id="addmediumform" name="addmediumform" enctype="multipart/form-data" target="uploadFrame" method="post" action="wp/media.srv">
+				<input name="file" id="file" type="file"/>
+				<input name="description" id="name" type="hidden" value="null" />
+				<input name="name" id="description" type="hidden" value="null" />
+				<input name="agentkey" id="agentkey" type="hidden" value="null" />
+				<input name="xmlrsp" id="xmlrsp" type="hidden" value="true" />
+		  	</form>	
+		</div>
+		
+	  </div>
+		
+		
+		<div style="clear:both">&nbsp;</div>
+	
+		
+		<!-- END EDITING BLOCK-->
 	</div>
-  </div>
-    <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> 
+	<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b>
 </div>
-</div>
-<b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
-	<script type="text/javascript" src="js/profile.js"></script>
-	<script type="text/javascript">
+ 
+ 
+ 
+<script type="text/javascript">
 		SRV.url = 'wp/srv/get.jsp?';
 		if(typeof sIFR == "function"){
 		    sIFR.replaceElement("#logobox span", named({sFlashSrc: "js/sIFR2.0.2/skia.swf",sBgColor:"#eeeeee"}));
     		sIFR();
 		};
 	</script>
-	<script type="text/javascript" src="js/events.js"></script>
+<script type="text/javascript" src="js/events.js"></script>
+<script type="text/javascript" src="js/profile.js"></script>
 </body>
 </html>
